--- a/Titanic_EDA.ipynb
+++ b/Titanic_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "4    man        True  NaN  Southampton    no   True  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,6 +177,44 @@
    "source": [
     "df = sns.load_dataset('titanic')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column       Non-Null Count  Dtype   \n",
+      "---  ------       --------------  -----   \n",
+      " 0   survived     891 non-null    int64   \n",
+      " 1   pclass       891 non-null    int64   \n",
+      " 2   sex          891 non-null    object  \n",
+      " 3   age          714 non-null    float64 \n",
+      " 4   sibsp        891 non-null    int64   \n",
+      " 5   parch        891 non-null    int64   \n",
+      " 6   fare         891 non-null    float64 \n",
+      " 7   embarked     889 non-null    object  \n",
+      " 8   class        891 non-null    category\n",
+      " 9   who          891 non-null    object  \n",
+      " 10  adult_male   891 non-null    bool    \n",
+      " 11  deck         203 non-null    category\n",
+      " 12  embark_town  889 non-null    object  \n",
+      " 13  alive        891 non-null    object  \n",
+      " 14  alone        891 non-null    bool    \n",
+      "dtypes: bool(2), category(2), float64(2), int64(4), object(5)\n",
+      "memory usage: 80.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
